--- a/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
-﻿@{ 
+﻿@{
     var applicationName = "Fitness Frog";
 }
 
-@helper GetAddEntryButtonVisibility()
+@helper GetButtonVisibility(string controller, string action = null)
 {
-    if ((string)ViewContext.RouteData.Values["controller"] == "Entries" && 
-        (string)ViewContext.RouteData.Values["action"] == "Add")
+    if ((string)ViewContext.RouteData.Values["controller"] == controller &&
+        (action == null || (string)ViewContext.RouteData.Values["action"] == action))
     {
         <text>hidden</text>
     }
@@ -25,7 +25,7 @@
     <link href="~/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Secular+One" rel="stylesheet">
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />*@
+        <link href="~/Content/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />*@
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
@@ -44,16 +44,39 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-                <a href="@Url.Action("Add", "Entries")" style="visibility: @GetAddEntryButtonVisibility()"
-                   class="btn btn-primary navbar-btn navbar-right">
-                    <span class="glyphicon glyphicon-plus"></span> Add Entry
-                </a>
+                <ul class="nav navbar-nav"></ul>
+                <div class="navbar-right">
+                    @if (Request.IsAuthenticated)
+                    {
+                        <a href="@Url.Action("Add", "Entries")"
+                           style="visibility: @GetButtonVisibility("Entries", "Add")"
+                           class="btn btn-primary navbar-btn">
+                            <span class="glyphicon glyphicon-plus"></span> Add Entry
+                        </a>
+                        using (Html.BeginForm("SignOut", "Account", FormMethod.Post, new { @class = "navbar-right" }))
+                        {
+                            <button type="submit" class="btn btn-default navbar-btn">
+                                <span class="glyphicon glyphicon-log-out"></span> Sign Out
+                            </button>
+                        }
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("Register", "Account")"
+                           style="visibility: @GetButtonVisibility("Account")"
+                           class="btn btn-success navbar-btn">
+                            <span class="glyphicon glyphicon-plus"></span> Register
+                        </a>
+                        <a href="@Url.Action("SignIn", "Account")"
+                           style="visibility: @GetButtonVisibility("Account")"
+                           class="btn btn-default navbar-btn">
+                            <span class="glyphicon glyphicon-log-in"></span> Sign In
+                        </a>
+                    }
+                </div>
             </div>
         </div>
     </div>
-
     <div class="container body-content">
         @RenderBody()
         <footer>
@@ -61,7 +84,6 @@
             <p>&copy; @DateTime.Now.Year @applicationName, All Rights Reserved.</p>
         </footer>
     </div>
-
     <script src="~/Scripts/jquery-2.2.4.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
