--- a/src/Treehouse.FitnessFrog/Views/Shared/_Menu.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Shared/_Menu.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+
 @helper GetButtonVisibility(string controller, string action = null)
 {
     if ((string)ViewContext.RouteData.Values["controller"] == controller &&
@@ -15,6 +16,9 @@
 <div class="navbar-right">
     @if (Request.IsAuthenticated)
     {
+        <h5 class="navbar-text" style="margin-top: 20px">
+            Hello @User.Identity.GetUserName()!
+        </h5>
         <a href="@Url.Action("Add", "Entries")"
            style="visibility: @GetButtonVisibility("Entries", "Add")"
            class="btn btn-primary navbar-btn">
